tests/baselines/reference/APISample_watcher.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_watcher.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The sample sources can be found
             at: https://github.com/Microsoft/TypeScript/wiki/Using-the-Compiler-API#incremental-build-support-using-the-language-services
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var process: any;
    declare var console: any;
    declare var fs: {
        existsSync(path: string): boolean;
        readdirSync(path: string): string[];
        readFileSync(filename: string, encoding?: string): string;
        writeFileSync(filename: string, data: any, options?: { encoding?: string; mode?: number; flag?: string; } | string): void;
        watchFile(filename: string, options: { persistent?: boolean; interval?: number; }, listener: (curr: { mtime: Date }, prev: { mtime: Date }) => void): void;
    };
    declare var path: any;
    
    import * as ts from "typescript";
    
    function watch(rootFileNames: string[], options: ts.CompilerOptions) {
        const files: ts.MapLike<{ version: number }> = {};
    
        // initialize the list of files
        rootFileNames.forEach(fileName => {
            files[fileName] = { version: 0 };
        });
    
        // Create the language service host to allow the LS to communicate with the host
        const servicesHost: ts.LanguageServiceHost = {
            getScriptFileNames: () => rootFileNames,
            getScriptVersion: (fileName) => files[fileName] && files[fileName].version.toString(),
            getScriptSnapshot: (fileName) => {
                if (!fs.existsSync(fileName)) {
                    return undefined;
                }
    
                return ts.ScriptSnapshot.fromString(fs.readFileSync(fileName).toString());
            },
            getCurrentDirectory: () => process.cwd(),
            getCompilationSettings: () => options,
            getDefaultLibFileName: (options) => ts.getDefaultLibFilePath(options),
        };
    
        // Create the language service files
        const services = ts.createLanguageService(servicesHost, ts.createDocumentRegistry())
    
        // Now let's watch the files
        rootFileNames.forEach(fileName => {
            // First time around, emit all files
            emitFile(fileName);
    
            // Add a watch on the file to handle next change
            fs.watchFile(fileName,
                { persistent: true, interval: 250 },
                (curr, prev) => {
                    // Check timestamp
                    if (+curr.mtime <= +prev.mtime) {
                        return;
                    }
    
                    // Update the version to signal a change in the file
                    files[fileName].version++;
    
                    // write the changes to disk
                    emitFile(fileName);
                });
        });
    
        function emitFile(fileName: string) {
            let output = services.getEmitOutput(fileName);
    
            if (!output.emitSkipped) {
                console.log(`Emitting ${fileName}`);
            }
            else {
                console.log(`Emitting ${fileName} failed`);
                logErrors(fileName);
            }
    
            output.outputFiles.forEach(o => {
                fs.writeFileSync(o.name, o.text, "utf8");
            });
        }
    
        function logErrors(fileName: string) {
            let allDiagnostics = services.getCompilerOptionsDiagnostics()
                .concat(services.getSyntacticDiagnostics(fileName))
                .concat(services.getSemanticDiagnostics(fileName));
    
            allDiagnostics.forEach(diagnostic => {
                let message = ts.flattenDiagnosticMessageText(diagnostic.messageText, "\n");
                if (diagnostic.file) {
                    let { line, character } = diagnostic.file.getLineAndCharacterOfPosition(diagnostic.start!);
                    console.log(`  Error ${diagnostic.file.fileName} (${line + 1},${character + 1}): ${message}`);
                }
                else {
                    console.log(`  Error: ${message}`);
                }
            });
        }
    }
    
    // Initialize files constituting the program as all .ts files in the current directory
    const currentDirectoryFiles = fs.readdirSync(process.cwd()).
        filter(fileName=> fileName.length >= 3 && fileName.substr(fileName.length - 3, 3) === ".ts");
    
    // Start the watcher
    watch(currentDirectoryFiles, { module: ts.ModuleKind.CommonJS });
    